@@ -4165,6 +4165,7 @@ v0.33.18        27-Jul-2001
 		The can be switched on using mbsetup.
 		Fixed security problem in Unix username and password entry.
 		Now stoped nicely if started without controling tty.
+		Many bugs fixed in the full screen editor.
 
 	mbuseradd:
 		Ported to work on FreeBSD.
